--- a/misgastos_app/templates/panel.html
+++ b/misgastos_app/templates/panel.html
@@ -29,7 +29,7 @@
 
     <main>
         <section>
-            <h1>Subtotal por categoría</h1>
+            <h1>Resumen por categoría</h1>
             <table>
                 <thead>
                     <tr>
