--- a/misgastos_app/templates/detalle.html
+++ b/misgastos_app/templates/detalle.html
@@ -80,7 +80,36 @@
                 </tbody>
             </table>
         </section>
-        <a href="/balance">Balance del mes</a>
+        <section>
+            <h1>Balance del mes</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Total</th>
+                        <th>Monto</th>
+                        <th>Acción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Ingresos</td>
+                        <td>{{ total.ingresos }}</td>
+                        <td> TBD </td>
+                    </tr>
+                    <tr>
+                        <td>Gastos</td>
+                        <td>{{ total.gastos }}</td>
+                        <td> TBD </td>
+                    </tr>
+                    <tr>
+                        <td>Saldo</td>
+                        <td>{{ total.saldo }}</td>
+                        <td> TBD </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <a href="/panel">Panel</a>
         <a href="/categorias">Detalle de categorías</a>
     </main>
 </body>
