--- a/misgastos_app/templates/iorecords.html
+++ b/misgastos_app/templates/iorecords.html
@@ -27,7 +27,7 @@
     
     <section>
         <h1>Registro en MisGastos.cl</h1>
-        <form method="post">
+        <form action="/iorecords/save" method="post">
             {{ ioform.csrf_token }}
             {{ ioform.mio.label }}
             {{ ioform.mio }}
@@ -67,37 +67,8 @@
             <input type="submit">
         </form>
     </section>
-<script>
-    let mio_select = document.getElementById('mio');
-    let cat_select = document.getElementById('mov_cid');
-    let itm_select = document.getElementById('mov_iid');
+
+    <script src="{{ url_for('static', filename='iorecords.js') }}"></script>
     
-    mio_select.onchange = function() {
-        let mio = mio_select.value;
-        fetch ('/cat/' + mio).then(function(response) {
-            response.json().then(function(data) {
-                let i = 0;
-                for (cat of data.cats) {
-                    cat_select.options[i] = new Option (cat.cname, cat.cid);
-                    i++
-                }
-                cat_select.onchange();
-            });
-        });
-    }
-    cat_select.onchange = function() {
-        let mio = mio_select.value;
-        let cat = cat_select.value;
-        fetch ('/item/' + mio + '/' + cat).then(function(response) {
-            response.json().then(function(data) {
-                let options = '';
-                for (item of data.items) {
-                    options += '<option value="' + item.iid + '">' + item.iname + '</option>';
-                }
-                itm_select.innerHTML = options;
-            });
-        });
-    }
-</script>
 </body>
 </html>
