--- a/misgastos_app/templates/panel.html
+++ b/misgastos_app/templates/panel.html
@@ -29,7 +29,7 @@
 
     <main>
         <section>
-            <h1>Resumen por categoría</h1>
+            <h1>Gastos por categoría</h1>
             <table>
                 <thead>
                     <tr>
@@ -48,11 +48,10 @@
             </table>
         </section>
         <section>
-            <h1>Distribución por categoría</h1>
+            <h1>Distribución de gastos por categoría</h1>
             {{ cat_chart() }}
         </section>
-        <a href="/detalle">Detalle del mes</a>
-        <a href="/balance">Balance del mes</a>
+        <a href="/detalle">Balance & detalle del mes</a>
         <a href="/categorias">Detalle de categorías</a>
     </main>
 </body>
