--- a/misgastos_app/templates/iorecords.html
+++ b/misgastos_app/templates/iorecords.html
@@ -15,7 +15,7 @@
         <a href="/blog">Blog</a>
     </nav>
 
-    <div>
+    <div class="flash">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
