--- a/misgastos_app/templates/categorias.html
+++ b/misgastos_app/templates/categorias.html
@@ -11,8 +11,10 @@
         
     <nav>
         <a href="/panel">Panel</a>
+        <a href="/detalle">Detalle & Balance</a>
+        <a href="/categorias">Categorías & Items</a>
+        <a href="/iorecords">Agregar Gastos & Ingresos</a>
         <a href="/logout">Logout</a>
-        <a href="/blog">Blog</a>
     </nav>
 
     <div class="flash">
