--- a/misgastos_app/templates/panel.html
+++ b/misgastos_app/templates/panel.html
@@ -12,9 +12,10 @@
     
     <nav>
         <a href="/panel">Panel</a>
+        <a href="/detalle">Detalle & Balance</a>
+        <a href="/categorias">Categorías & Items</a>
+        <a href="/iorecords">Agregar Gastos & Ingresos</a>
         <a href="/logout">Logout</a>
-        <a href="/blog">Blog</a>
-        <button><a href="/iorecords">Registrar ingresos y gastos</a></button>
     </nav>
 
     <div class="flash">
@@ -29,7 +30,7 @@
 
     <main>
         <section>
-            <h1>Ingresos por categoría</h1>
+            <h1>Ingresos</h1>
             <table>
                 <thead>
                     <tr>
@@ -46,11 +47,14 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <h1>% Ingresos por categoría</h1>
-            {{ icat_chart() }}
+            <div class="char">
+                <h1>Distribución de Ingresos</h1>
+                {{ icat_chart() }}
+                <br>
+            </div>
         </section>
         <section>
-            <h1>Gastos por categoría</h1>
+            <h1>Gastos</h1>
             <table>
                 <thead>
                     <tr>
@@ -67,11 +71,13 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <h1>% Gastos por categoría</h1>
-            {{ gcat_chart() }}
+            <div class="char">
+                <h1>Distribución de Gastos</h1>
+                {{ gcat_chart() }}
+                <br>
+            </div>
         </section>
-        <a href="/detalle">Balance & detalle del mes</a>
-        <a href="/categorias">Detalle de categorías</a>
+        <a href="#">Volver arriba</a>
     </main>
 </body>
 </html>
