Last before class delivery

--- a/misgastos_app/templates/detalle.html
+++ b/misgastos_app/templates/detalle.html
@@ -121,8 +121,7 @@
                 </tbody>
             </table>
         </section>
-        <a href="/panel">Panel</a>
-        <a href="/categorias">Detalle de categorías</a>
+        <a href="#">Volver arriba</a>
     </main>
 </body>
 </html>
