--- a/misgastos_app/templates/categorias.html
+++ b/misgastos_app/templates/categorias.html
@@ -98,6 +98,7 @@
                 {% endfor %}
             </tbody>
         </table>
+        <a href="#">Volver arriba</a>
     </main>
 </body>
 </html>
