--- a/misgastos_app/templates/register.html
+++ b/misgastos_app/templates/register.html
@@ -18,15 +18,15 @@
     <section>
         <h1>Registro</h1>
         <form action="/registerme" method="post">
-            <label for="first_name">Fisrt Name</label>
+            <label for="first_name">Nombre</label>
             <input type="text" name="first_name" required>
-            <label for="last_name">Last Name</label>
+            <label for="last_name">Apellido</label>
             <input type="text" name="last_name" required>
             <label for="email">Email</label>
             <input type="email" name="email" required>
             <label for="password">Password</label>
             <input type="password" name="password" required>
-            <label for="confirm_password">Confirm Password</label>
+            <label for="confirm_password">Confirmar Password</label>
             <input type="password" name="confirm_password" required>
             <input type="submit" value="Register">
         </form>
