--- a/misgastos_app/static/style.css
+++ b/misgastos_app/static/style.css
@@ -62,7 +62,7 @@ h1, h2, h3 {
 
 a {
     color: #03dac5;
-    font-size: 1.1vw;
+    font-size: 1vw;
 }
 
 main, form {
@@ -72,8 +72,8 @@ main, form {
 }
 
 h1, h2, h3, h4, a, p, input, label, select, textarea {
-    margin: 0.5vw;
-    padding: 0.5vw;
+    margin: 0.25vw;
+    padding: 0.25vw;
 }
 
 label {
@@ -97,7 +97,7 @@ table, th, td {
     border-radius: 0.5vw;
     font-family: Verdana;
     font-size: 1vw;
-    padding: 0.5vw;
+    padding: 0.25vw;
 }
 
 th {
@@ -105,22 +105,31 @@ th {
     color: whitesmoke;
 }
 
-tr:nth-child(even) {
+/* tr:nth-child(even) {
     background-color: rgb(96, 96, 96);
-}
+} */
 
 tr:hover {
-    background-color:#6200ee;
+    background-color: gray;
 }
 
 pre {
     font-family: Verdana;
 }
 
+.dropbtncat {
+    background-color: #bb86fc;
+    color: white;
+    padding: 0.25vw;
+    font-size: 1vw;
+    border: none;
+    border-radius: 0.5vw;
+}
+
 .dropbtn {
     background-color: #018786;
     color: white;
-    padding: 0.5vw;
+    padding: 0.25vw;
     font-size: 1vw;
     border: none;
     border-radius: 0.5vw;
@@ -140,13 +149,19 @@ pre {
 
 .dropdown-content a {
     color: #313131;
-    padding: 0.5vw;
+    padding: 0.25vw;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #dddd;}
+.dropdown-content a:hover {
+    background-color: #dddd;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
-.dropdown:hover .dropbtn {background-color: #313131;}
+.dropdown:hover .dropbtn {
+    background-color: #313131;
+}
