--- a/misgastos_app/templates/categorias.html
+++ b/misgastos_app/templates/categorias.html
@@ -41,7 +41,7 @@
                 <tr>
                     <td>
                         <div class="dropdown">
-                            <button class="dropbtn">{{ cat.cname }}</button>
+                            <button class="dropbtncat">{{ cat.cname }}</button>
                             <div class="dropdown-content">
                                 <a href="/items_edit/{{cat.cio}}/{{cat.cid}}/{{cat.cname}}">Agregar Item</a>
                                 <a href="/items_delete/{{cat.cio}}/{{cat.cid}}" onclick="return confirm('Confirme para eliminar TODOS los items')">Eliminar todos</a>
@@ -76,7 +76,7 @@
                 <tr>
                     <td>
                         <div class="dropdown">
-                            <button class="dropbtn">{{ cat.cname }}</button>
+                            <button class="dropbtncat">{{ cat.cname }}</button>
                             <div class="dropdown-content">
                                 <a href="/items_edit/{{cat.cio}}/{{cat.cid}}/{{cat.cname}}">Agregar Item</a>
                                 <a href="/items_delete/{{cat.cio}}/{{cat.cid}}" onclick="return confirm('Confirme para eliminar TODOS los items')">Eliminar todos</a>
